navigation mobile view enhancement

--- a/templates/bq_b2b_inventory_management/index.ejs
+++ b/templates/bq_b2b_inventory_management/index.ejs
@@ -11,6 +11,8 @@
 <body class="">
 
   <div class="top-glass"></div>
+
+
   <header class="top-nav">
     <a class="backArrow" href="/">&#8592;</a>
     <div class="headerShadow">
@@ -19,9 +21,10 @@
         <button class="nav-link is-active" data-link="overview" type="button">Overview</button>
         <button class="nav-link" data-link="changes" type="button">What Changed</button>
         <button class="nav-link" data-link="results" type="button">Results</button>
-
       </div>
     </div>
+        <div class="backArrow backArrow--ghost">&#8592;</div>
+
   </header>
   <section id="overview" data-nav="overview">
 
